// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Variables/EditVar edit variable (boolean) 1`] = `
Array [
  <div
    className="canvasVarHeader__triggerWrapper"
  >
    <button
      className="canvasVarHeader__button"
      onClick={[Function]}
      type="button"
    >
      <span
        className="canvasVarHeader__iconWrapper"
      >
        <span
          data-euiicon-type="sortLeft"
          style={
            Object {
              "verticalAlign": "top",
            }
          }
        >
          
        </span>
      </span>
      <span>
        <span
          className="canvasVarHeader__anchor"
        >
          Edit variable
        </span>
      </span>
    </button>
  </div>,
  <div
    className="canvasSidebar__accordionContent"
  >
    <div>
      <div
        className="euiPanel euiPanel--warning euiPanel--paddingSmall euiCallOut euiCallOut--warning emotion-euiPanel-none-s-warning-euiCallOut"
      >
        <p
          className="euiTitle euiCallOutHeader__title emotion-euiTitle-xxs-euiCallOutHeader-warning"
        >
          <span
            aria-hidden="true"
            className="emotion-euiCallOut__icon"
            color="inherit"
            data-euiicon-type="alert"
            size="m"
          >
            
          </span>
          Editing a variable in use may adversely affect your workpad
        </p>
      </div>
      <div
        className="euiSpacer euiSpacer--m emotion-euiSpacer-m"
      />
    </div>
    <form
      className="euiForm"
    >
      <div
        className="euiFormRow euiFormRow--hasLabel euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Type
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-EuiInputPopover"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="euiPopover__anchor css-zih94u-render"
            >
              <div>
                <input
                  id="generated-id"
                  type="hidden"
                  value="boolean"
                />
                <div
                  className="euiFormControlLayout euiFormControlLayout--compressed"
                >
                  <div
                    className="euiFormControlLayout__childrenWrapper"
                  >
                    <span
                      className="emotion-euiScreenReaderOnly"
                      id="euiSuperSelect__generated-id__screenreaderLabelId"
                    >
                      Select an option: 
                      <div
                        className="canvasEditVar__typeOption"
                      >
                        <span
                          className="euiToken canvasEditVar__tokenIcon emotion-euiToken-square-light-s-euiColorVis7"
                          style={Object {}}
                        >
                          <span
                            data-euiicon-type="tokenBoolean"
                            size="m"
                          >
                            
                          </span>
                        </span>
                         
                        <span>
                          Boolean
                        </span>
                      </div>
                      , is selected
                    </span>
                    <button
                      aria-haspopup="listbox"
                      className="euiSuperSelectControl euiFormControlLayout--1icons euiSuperSelectControl--compressed"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      type="button"
                    >
                      <div
                        className="canvasEditVar__typeOption"
                      >
                        <span
                          className="euiToken canvasEditVar__tokenIcon emotion-euiToken-square-light-s-euiColorVis7"
                          style={Object {}}
                        >
                          <span
                            data-euiicon-type="tokenBoolean"
                            size="m"
                          >
                            
                          </span>
                        </span>
                         
                        <span>
                          Boolean
                        </span>
                      </div>
                    </button>
                    <div
                      className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                    >
                      <span
                        className="euiFormControlLayoutCustomIcon"
                      >
                        <span
                          aria-hidden="true"
                          className="euiFormControlLayoutCustomIcon__icon"
                          data-euiicon-type="arrowDown"
                          size="s"
                        >
                          
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFormRow euiFormRow--hasLabel euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid={false}
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Name
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              className="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-invalid={false}
                className="euiFieldText euiFieldText--compressed"
                id="generated-id"
                name="name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="zenMode"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFormRow euiFormRow--hasLabel euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Value
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <fieldset
            className="euiButtonGroup euiButtonGroup--compressed euiButtonGroup--text euiButtonGroup--fullWidth"
            disabled={false}
          >
            <legend
              className="emotion-euiScreenReaderOnly"
            >
              Boolean value
            </legend>
            <div
              className="euiButtonGroup__buttons"
            >
              <label
                className="euiButtonGroupButton euiButtonGroupButton--small euiButtonGroupButton-isSelected css-qmwmig-fill-text-EuiButtonGroupButton"
                disabled={false}
                htmlFor="generated-id"
                style={
                  Object {
                    "minWidth": undefined,
                  }
                }
              >
                <span
                  className="euiButtonContent euiButton__content"
                >
                  <span
                    className="euiButton__text euiButtonGroupButton__textShift"
                  >
                    <input
                      checked={true}
                      className="euiScreenReaderOnly"
                      data-test-subj="generated-id-true"
                      disabled={false}
                      id="generated-id"
                      name="value"
                      onChange={[Function]}
                      type="radio"
                    />
                    True
                  </span>
                </span>
              </label>
              <label
                className="euiButtonGroupButton euiButtonGroupButton--small  css-dbzl5z-empty-text-EuiButtonGroupButton"
                disabled={false}
                htmlFor="generated-id"
                style={
                  Object {
                    "minWidth": undefined,
                  }
                }
              >
                <span
                  className="euiButtonContent euiButton__content"
                >
                  <span
                    className="euiButton__text euiButtonGroupButton__textShift"
                  >
                    <input
                      checked={false}
                      className="euiScreenReaderOnly"
                      data-test-subj="generated-id-false"
                      disabled={false}
                      id="generated-id"
                      name="value"
                      onChange={[Function]}
                      type="radio"
                    />
                    False
                  </span>
                </span>
              </label>
            </div>
          </fieldset>
        </div>
      </div>
      <div
        className="euiSpacer euiSpacer--m emotion-euiSpacer-m"
      />
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button
            className="euiButton emotion-euiButtonDisplay-s-s-fill-success"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-euiButtonDisplayContent"
            >
              <span
                className="emotion-euiButtonDisplayContent__icon-m"
                color="inherit"
                data-euiicon-type="save"
                size="m"
              >
                
              </span>
              <span
                className="eui-textTruncate"
              >
                Save changes
              </span>
            </span>
          </button>
        </div>
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button
            className="euiButtonEmpty euiButtonEmpty--small css-9t7nyf-empty-primary"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="euiButtonContent euiButtonEmpty__content"
            >
              <span
                className="euiButtonEmpty__text"
              >
                Cancel
              </span>
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>,
]
`;

exports[`Storyshots components/Variables/EditVar edit variable (number) 1`] = `
Array [
  <div
    className="canvasVarHeader__triggerWrapper"
  >
    <button
      className="canvasVarHeader__button"
      onClick={[Function]}
      type="button"
    >
      <span
        className="canvasVarHeader__iconWrapper"
      >
        <span
          data-euiicon-type="sortLeft"
          style={
            Object {
              "verticalAlign": "top",
            }
          }
        >
          
        </span>
      </span>
      <span>
        <span
          className="canvasVarHeader__anchor"
        >
          Edit variable
        </span>
      </span>
    </button>
  </div>,
  <div
    className="canvasSidebar__accordionContent"
  >
    <div>
      <div
        className="euiPanel euiPanel--warning euiPanel--paddingSmall euiCallOut euiCallOut--warning emotion-euiPanel-none-s-warning-euiCallOut"
      >
        <p
          className="euiTitle euiCallOutHeader__title emotion-euiTitle-xxs-euiCallOutHeader-warning"
        >
          <span
            aria-hidden="true"
            className="emotion-euiCallOut__icon"
            color="inherit"
            data-euiicon-type="alert"
            size="m"
          >
            
          </span>
          Editing a variable in use may adversely affect your workpad
        </p>
      </div>
      <div
        className="euiSpacer euiSpacer--m emotion-euiSpacer-m"
      />
    </div>
    <form
      className="euiForm"
    >
      <div
        className="euiFormRow euiFormRow--hasLabel euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Type
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-EuiInputPopover"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="euiPopover__anchor css-zih94u-render"
            >
              <div>
                <input
                  id="generated-id"
                  type="hidden"
                  value="number"
                />
                <div
                  className="euiFormControlLayout euiFormControlLayout--compressed"
                >
                  <div
                    className="euiFormControlLayout__childrenWrapper"
                  >
                    <span
                      className="emotion-euiScreenReaderOnly"
                      id="euiSuperSelect__generated-id__screenreaderLabelId"
                    >
                      Select an option: 
                      <div
                        className="canvasEditVar__typeOption"
                      >
                        <span
                          className="euiToken canvasEditVar__tokenIcon emotion-euiToken-square-light-s-euiColorVis0"
                          style={Object {}}
                        >
                          <span
                            data-euiicon-type="tokenNumber"
                            size="m"
                          >
                            
                          </span>
                        </span>
                         
                        <span>
                          Number
                        </span>
                      </div>
                      , is selected
                    </span>
                    <button
                      aria-haspopup="listbox"
                      className="euiSuperSelectControl euiFormControlLayout--1icons euiSuperSelectControl--compressed"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      type="button"
                    >
                      <div
                        className="canvasEditVar__typeOption"
                      >
                        <span
                          className="euiToken canvasEditVar__tokenIcon emotion-euiToken-square-light-s-euiColorVis0"
                          style={Object {}}
                        >
                          <span
                            data-euiicon-type="tokenNumber"
                            size="m"
                          >
                            
                          </span>
                        </span>
                         
                        <span>
                          Number
                        </span>
                      </div>
                    </button>
                    <div
                      className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                    >
                      <span
                        className="euiFormControlLayoutCustomIcon"
                      >
                        <span
                          aria-hidden="true"
                          className="euiFormControlLayoutCustomIcon__icon"
                          data-euiicon-type="arrowDown"
                          size="s"
                        >
                          
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFormRow euiFormRow--hasLabel euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid={false}
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Name
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              className="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-invalid={false}
                className="euiFieldText euiFieldText--compressed"
                id="generated-id"
                name="name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="bigNumber"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFormRow euiFormRow--hasLabel euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Value
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              className="euiFormControlLayout__childrenWrapper"
            >
              <input
                className="euiFieldNumber euiFieldNumber--compressed"
                name="value"
                onChange={[Function]}
                type="number"
                value={1000}
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiSpacer euiSpacer--m emotion-euiSpacer-m"
      />
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button
            className="euiButton emotion-euiButtonDisplay-s-s-fill-success"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-euiButtonDisplayContent"
            >
              <span
                className="emotion-euiButtonDisplayContent__icon-m"
                color="inherit"
                data-euiicon-type="save"
                size="m"
              >
                
              </span>
              <span
                className="eui-textTruncate"
              >
                Save changes
              </span>
            </span>
          </button>
        </div>
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button
            className="euiButtonEmpty euiButtonEmpty--small css-9t7nyf-empty-primary"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="euiButtonContent euiButtonEmpty__content"
            >
              <span
                className="euiButtonEmpty__text"
              >
                Cancel
              </span>
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>,
]
`;

exports[`Storyshots components/Variables/EditVar edit variable (string) 1`] = `
Array [
  <div
    className="canvasVarHeader__triggerWrapper"
  >
    <button
      className="canvasVarHeader__button"
      onClick={[Function]}
      type="button"
    >
      <span
        className="canvasVarHeader__iconWrapper"
      >
        <span
          data-euiicon-type="sortLeft"
          style={
            Object {
              "verticalAlign": "top",
            }
          }
        >
          
        </span>
      </span>
      <span>
        <span
          className="canvasVarHeader__anchor"
        >
          Edit variable
        </span>
      </span>
    </button>
  </div>,
  <div
    className="canvasSidebar__accordionContent"
  >
    <div>
      <div
        className="euiPanel euiPanel--warning euiPanel--paddingSmall euiCallOut euiCallOut--warning emotion-euiPanel-none-s-warning-euiCallOut"
      >
        <p
          className="euiTitle euiCallOutHeader__title emotion-euiTitle-xxs-euiCallOutHeader-warning"
        >
          <span
            aria-hidden="true"
            className="emotion-euiCallOut__icon"
            color="inherit"
            data-euiicon-type="alert"
            size="m"
          >
            
          </span>
          Editing a variable in use may adversely affect your workpad
        </p>
      </div>
      <div
        className="euiSpacer euiSpacer--m emotion-euiSpacer-m"
      />
    </div>
    <form
      className="euiForm"
    >
      <div
        className="euiFormRow euiFormRow--hasLabel euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Type
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-EuiInputPopover"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="euiPopover__anchor css-zih94u-render"
            >
              <div>
                <input
                  id="generated-id"
                  type="hidden"
                  value="string"
                />
                <div
                  className="euiFormControlLayout euiFormControlLayout--compressed"
                >
                  <div
                    className="euiFormControlLayout__childrenWrapper"
                  >
                    <span
                      className="emotion-euiScreenReaderOnly"
                      id="euiSuperSelect__generated-id__screenreaderLabelId"
                    >
                      Select an option: 
                      <div
                        className="canvasEditVar__typeOption"
                      >
                        <span
                          className="euiToken canvasEditVar__tokenIcon emotion-euiToken-square-light-s-euiColorVis1"
                          style={Object {}}
                        >
                          <span
                            data-euiicon-type="tokenString"
                            size="m"
                          >
                            
                          </span>
                        </span>
                         
                        <span>
                          String
                        </span>
                      </div>
                      , is selected
                    </span>
                    <button
                      aria-haspopup="listbox"
                      className="euiSuperSelectControl euiFormControlLayout--1icons euiSuperSelectControl--compressed"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      type="button"
                    >
                      <div
                        className="canvasEditVar__typeOption"
                      >
                        <span
                          className="euiToken canvasEditVar__tokenIcon emotion-euiToken-square-light-s-euiColorVis1"
                          style={Object {}}
                        >
                          <span
                            data-euiicon-type="tokenString"
                            size="m"
                          >
                            
                          </span>
                        </span>
                         
                        <span>
                          String
                        </span>
                      </div>
                    </button>
                    <div
                      className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                    >
                      <span
                        className="euiFormControlLayoutCustomIcon"
                      >
                        <span
                          aria-hidden="true"
                          className="euiFormControlLayoutCustomIcon__icon"
                          data-euiicon-type="arrowDown"
                          size="s"
                        >
                          
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFormRow euiFormRow--hasLabel euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid={false}
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Name
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              className="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-invalid={false}
                className="euiFieldText euiFieldText--compressed"
                id="generated-id"
                name="name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value="homeUrl"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFormRow euiFormRow--hasLabel euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Value
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              className="euiFormControlLayout__childrenWrapper"
            >
              <input
                className="euiFieldText euiFieldText--compressed"
                name="value"
                onChange={[Function]}
                type="text"
                value="https://elastic.co"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiSpacer euiSpacer--m emotion-euiSpacer-m"
      />
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button
            className="euiButton emotion-euiButtonDisplay-s-s-fill-success"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-euiButtonDisplayContent"
            >
              <span
                className="emotion-euiButtonDisplayContent__icon-m"
                color="inherit"
                data-euiicon-type="save"
                size="m"
              >
                
              </span>
              <span
                className="eui-textTruncate"
              >
                Save changes
              </span>
            </span>
          </button>
        </div>
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button
            className="euiButtonEmpty euiButtonEmpty--small css-9t7nyf-empty-primary"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="euiButtonContent euiButtonEmpty__content"
            >
              <span
                className="euiButtonEmpty__text"
              >
                Cancel
              </span>
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>,
]
`;

exports[`Storyshots components/Variables/EditVar new variable 1`] = `
Array [
  <div
    className="canvasVarHeader__triggerWrapper"
  >
    <button
      className="canvasVarHeader__button"
      onClick={[Function]}
      type="button"
    >
      <span
        className="canvasVarHeader__iconWrapper"
      >
        <span
          data-euiicon-type="sortLeft"
          style={
            Object {
              "verticalAlign": "top",
            }
          }
        >
          
        </span>
      </span>
      <span>
        <span
          className="canvasVarHeader__anchor"
        >
          Add variable
        </span>
      </span>
    </button>
  </div>,
  <div
    className="canvasSidebar__accordionContent"
  >
    <form
      className="euiForm"
    >
      <div
        className="euiFormRow euiFormRow--hasLabel euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Type
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiPopover euiInputPopover euiSuperSelect emotion-euiPopover-EuiInputPopover"
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <div
              className="euiPopover__anchor css-zih94u-render"
            >
              <div>
                <input
                  id="generated-id"
                  type="hidden"
                  value="string"
                />
                <div
                  className="euiFormControlLayout euiFormControlLayout--compressed"
                >
                  <div
                    className="euiFormControlLayout__childrenWrapper"
                  >
                    <span
                      className="emotion-euiScreenReaderOnly"
                      id="euiSuperSelect__generated-id__screenreaderLabelId"
                    >
                      Select an option: 
                      <div
                        className="canvasEditVar__typeOption"
                      >
                        <span
                          className="euiToken canvasEditVar__tokenIcon emotion-euiToken-square-light-s-euiColorVis1"
                          style={Object {}}
                        >
                          <span
                            data-euiicon-type="tokenString"
                            size="m"
                          >
                            
                          </span>
                        </span>
                         
                        <span>
                          String
                        </span>
                      </div>
                      , is selected
                    </span>
                    <button
                      aria-haspopup="listbox"
                      className="euiSuperSelectControl euiFormControlLayout--1icons euiSuperSelectControl--compressed"
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      type="button"
                    >
                      <div
                        className="canvasEditVar__typeOption"
                      >
                        <span
                          className="euiToken canvasEditVar__tokenIcon emotion-euiToken-square-light-s-euiColorVis1"
                          style={Object {}}
                        >
                          <span
                            data-euiicon-type="tokenString"
                            size="m"
                          >
                            
                          </span>
                        </span>
                         
                        <span>
                          String
                        </span>
                      </div>
                    </button>
                    <div
                      className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                    >
                      <span
                        className="euiFormControlLayoutCustomIcon"
                      >
                        <span
                          aria-hidden="true"
                          className="euiFormControlLayoutCustomIcon__icon"
                          data-euiicon-type="arrowDown"
                          size="s"
                        >
                          
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFormRow euiFormRow--hasLabel euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid={false}
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Name
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              className="euiFormControlLayout__childrenWrapper"
            >
              <input
                aria-invalid={false}
                className="euiFieldText euiFieldText--compressed"
                id="generated-id"
                name="name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiFormRow euiFormRow--hasLabel euiFormRow--compressed"
        id="generated-id-row"
      >
        <div
          className="euiFormRow__labelWrapper"
        >
          <label
            className="euiFormLabel euiFormRow__label"
            htmlFor="generated-id"
            id="generated-id-label"
          >
            Value
          </label>
        </div>
        <div
          className="euiFormRow__fieldWrapper"
        >
          <div
            className="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              className="euiFormControlLayout__childrenWrapper"
            >
              <input
                className="euiFieldText euiFieldText--compressed"
                name="value"
                onChange={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
      <div
        className="euiSpacer euiSpacer--m emotion-euiSpacer-m"
      />
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button
            className="euiButton emotion-euiButtonDisplay-s-isDisabled-s-fill-disabled"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-euiButtonDisplayContent"
            >
              <span
                className="emotion-euiButtonDisplayContent__icon-m"
                color="inherit"
                data-euiicon-type="save"
                size="m"
              >
                
              </span>
              <span
                className="eui-textTruncate"
              >
                Save changes
              </span>
            </span>
          </button>
        </div>
        <div
          className="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button
            className="euiButtonEmpty euiButtonEmpty--small css-9t7nyf-empty-primary"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="euiButtonContent euiButtonEmpty__content"
            >
              <span
                className="euiButtonEmpty__text"
              >
                Cancel
              </span>
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>,
]
`;
